--- a/change_DP.ipynb
+++ b/change_DP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,6 +124,8 @@
     "    \n",
     "    while (m > 0):\n",
     "    \n",
+    "        #use index of m-1 into list best_new_coins_for_m\n",
+    "        #because of 0-based python indexing\n",
     "        coins_for_change_dict[best_new_coins_for_m[m - 1]] += 1\n",
     "    \n",
     "        m -= best_new_coins_for_m[m - 1]\n",
@@ -138,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -185,14 +187,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Elapsed time for recursive method = 10.17 seconds\n",
+      "Elapsed time for recursive method = 10.28 seconds\n",
       "\n",
       "The minimum # of coins required to change 52 cents = 4.\n"
      ]
