edited comment (sp) of edit_distance.ipynb

--- a/edit_distance.ipynb
+++ b/edit_distance.ipynb
@@ -30,7 +30,7 @@
     "def align_sequences(seq1,seq2,edit_distance_matrix,indel_char = '-'):\n",
     "    \n",
     "    \"\"\"\n",
-    "    This function computes an alignment, not ncessarily unique,\n",
+    "    This function computes an alignment, not necessarily unique,\n",
     "    of the two sequence seq1 and seq2 corresponding to their \n",
     "    edit distance. It does so by backtracing a path through the \n",
     "    edit_distance_matrix input by checking logical conditions\n",
