edited comment (sp) of edit_distance.ipynb

--- a/edit_distance.ipynb
+++ b/edit_distance.ipynb
@@ -31,11 +31,12 @@
     "    \n",
     "    \"\"\"\n",
     "    This function computes an alignment, not necessarily unique,\n",
-    "    of the two sequence seq1 and seq2 corresponding to their \n",
+    "    of the two sequences seq1 and seq2 corresponding to their \n",
     "    edit distance. It does so by backtracing a path through the \n",
     "    edit_distance_matrix input by checking logical conditions\n",
-    "    in a neighborhood of current matrix cell. The specific\n",
-    "    alignment produced by the code depends on the order of the \n",
+    "    in a neighborhood of the current matrix cell. The specific\n",
+    "    alignment (among those that satisfy the edit distance) \n",
+    "    produced by the code depends on the order of the \n",
     "    conditionals in the code.\n",
     "    \n",
     "    inputs:\n",
