added some line breaks in code of edit_distance.ipynb

--- a/edit_distance.ipynb
+++ b/edit_distance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,10 +79,11 @@
     "        seq1_index = row_index - 1\n",
     "        seq2_index = col_index - 1\n",
     "\n",
+    "        #match\n",
     "        if ((seq1[seq1_index] == seq2[seq2_index]) and \\\n",
-    "            (edit_distance_matrix[row_index,col_index] == edit_distance_matrix[row_index - 1,col_index - 1])):\n",
+    "            (edit_distance_matrix[row_index,col_index] == \\\n",
+    "             edit_distance_matrix[row_index - 1,col_index - 1])):\n",
     "\n",
-    "            #match\n",
     "            aligned_seq1 += seq1[seq1_index]\n",
     "\n",
     "            aligned_seq2 += seq2[seq2_index]\n",
@@ -92,7 +93,8 @@
     "            col_index -= 1\n",
     "        \n",
     "        #mismatch\n",
-    "        elif (edit_distance_matrix[row_index,col_index] == edit_distance_matrix[row_index - 1,col_index - 1] + 1):\n",
+    "        elif (edit_distance_matrix[row_index,col_index] == \\\n",
+    "              edit_distance_matrix[row_index - 1,col_index - 1] + 1):\n",
     "\n",
     "            aligned_seq1 += seq1[seq1_index]\n",
     "\n",
@@ -103,7 +105,8 @@
     "            col_index -= 1\n",
     "\n",
     "        #deletion\n",
-    "        elif (edit_distance_matrix[row_index,col_index] == edit_distance_matrix[row_index - 1,col_index] + 1):\n",
+    "        elif (edit_distance_matrix[row_index,col_index] == \\\n",
+    "              edit_distance_matrix[row_index - 1,col_index] + 1):\n",
     "\n",
     "            aligned_seq1 += seq1[seq1_index]\n",
     "\n",
@@ -112,7 +115,8 @@
     "            row_index -= 1\n",
     "\n",
     "        #insertion\n",
-    "        elif (edit_distance_matrix[row_index,col_index] == edit_distance_matrix[row_index ,col_index - 1] + 1):\n",
+    "        elif (edit_distance_matrix[row_index,col_index] == \\\n",
+    "              edit_distance_matrix[row_index ,col_index - 1] + 1):\n",
     "\n",
     "            aligned_seq1 += indel_char\n",
     "\n",
@@ -169,9 +173,11 @@
     "    for col_index in range(1,len_seq2 + 1):\n",
     "        for row_index in range(1,len_seq1 + 1):\n",
     "            \n",
-    "            distance_for_insertion = edit_distance_matrix[row_index,col_index - 1] + 1\n",
+    "            distance_for_insertion = \\\n",
+    "            edit_distance_matrix[row_index,col_index - 1] + 1\n",
     "            \n",
-    "            distance_for_deletion = edit_distance_matrix[row_index - 1,col_index] + 1\n",
+    "            distance_for_deletion = \\\n",
+    "            edit_distance_matrix[row_index - 1,col_index] + 1\n",
     "            \n",
     "            #note that the row and column indices of edit_distance_matrix are advanced\n",
     "            #by 1 relative to the corresponding indices of seq1 and seq2, respectively.\n",
@@ -181,12 +187,14 @@
     "            if (seq1[seq1_index] == seq2[seq2_index]):\n",
     "                \n",
     "                #current distance if there is a symbol match\n",
-    "                distance_for_mismatch_or_match = edit_distance_matrix[row_index - 1,col_index - 1]\n",
+    "                distance_for_mismatch_or_match = \\\n",
+    "                edit_distance_matrix[row_index - 1,col_index - 1]\n",
     "            \n",
     "            else:\n",
     "            \n",
     "                #current distance if there is a symbol mismatch\n",
-    "                distance_for_mismatch_or_match = edit_distance_matrix[row_index - 1,col_index - 1] + 1\n",
+    "                distance_for_mismatch_or_match = \\\n",
+    "                edit_distance_matrix[row_index - 1,col_index - 1] + 1\n",
     "            \n",
     "            edit_distance_matrix[row_index,col_index] = \\\n",
     "            min(distance_for_insertion,\\\n",
@@ -213,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
