added some line breaks in code of edit_distance.ipynb

--- a/edit_distance.ipynb
+++ b/edit_distance.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,6 +131,8 @@
     "\n",
     "            return '',''\n",
     "\n",
+    "    #ultimately reversing order of aligned sequences because \n",
+    "    #they were constructed from backtracing through edit_distance_matrix\n",
     "    aligned_seq1 = aligned_seq1[::-1]\n",
     "    \n",
     "    aligned_seq2 = aligned_seq2[::-1]\n",
@@ -221,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
