--- a/AMachineLearningCompetition.ipynb
+++ b/AMachineLearningCompetition.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "\"\"\"This notebook has Python code I wrote for an Avito kaggle competition. I have placed it in this repository\n",
     "simply to illustrate my ability to use tensorflow, keras, and pandas. The neural network, which utilized \n",
-    "multiple LSTMs, is defined in this notebook in a function called define_model().\"\"\""
+    "multiple LSTMs, is defined in this notebook in a function called define_model(). This notebook does not display \n",
+    "any meaningful results for that competition as it is simply here to show my code.\"\"\""
    ]
   },
   {
@@ -2346,62 +2347,6 @@
     "    return tf.reduce_mean(tf.square(tf.subtract(y_true, y_pred)))\n",
     "    \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4]\n",
-      "None\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = [1,2,3]\n",
-    "b = a + [4]\n",
-    "c = a.append(4)\n",
-    "print(b)\n",
-    "print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, [4]]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
