added comment pointing to motivating lectures for code in edit_distance.ipynb

--- a/edit_distance.ipynb
+++ b/edit_distance.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''This code was motivated by the Dynamic Programming lectures from \n",
+    "https://www.coursera.org/learn/algorithmic-toolbox given by Pavel Pevzner.'''"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
